tests/sources/invalid/arrays/array_access_and_method_errors.fire
// Array-access on a non-array type, and an array method called with the
// wrong argument count.
fn indexNonArray() -> int32 {
    x: int32 = 5;
    y: int32 = x[0];  //~ ERROR FS-SEM-0010 @16
    return y;
}

fn undefinedIndex() -> int32 {
    arr: int32[] = [1, 2];
    y: int32 = arr[undef];  //~ ERROR FS-PARSE-0003 @20
    return y;
}

fn main() -> int32 {
    arr: int32[] = [1, 2];
    x: int32 = arr.length(1);  //~ ERROR FS-SEM-0010 @20
    return x;
}
